@@ -25,7 +25,7 @@ public class TagRepositoryImpl implements TagRepository {
     private static final Logger log = LoggerFactory.getLogger(TagRepositoryImpl.class);
 
     @Override
-    public Optional<Tag> findById(String id) {
+    public Optional<Tag> findById(UUID id) {
         String sql = """
             SELECT id, user_id, name, color
             FROM tags
@@ -35,7 +35,7 @@ public class TagRepositoryImpl implements TagRepository {
 
         try (Connection conn = SQLiteConnectionFactory.getConnection();
              PreparedStatement ps = conn.prepareStatement(sql)) {
-            ps.setString(1, id);
+            ps.setString(1, id.toString());
             try (ResultSet rs = ps.executeQuery()) {
                 if (rs.next()) {
                     return Optional.of(mapRow(rs));
@@ -50,7 +50,7 @@ public class TagRepositoryImpl implements TagRepository {
     }
 
     @Override
-    public Optional<Tag> findByUserIdAndName(String userId, String name) {
+    public Optional<Tag> findByUserIdAndName(UUID userId, String name) {
         String sql = """
             SELECT id, user_id, name, color
             FROM tags
@@ -60,7 +60,7 @@ public class TagRepositoryImpl implements TagRepository {
 
         try (Connection conn = SQLiteConnectionFactory.getConnection();
              PreparedStatement ps = conn.prepareStatement(sql)) {
-            ps.setString(1, userId);
+            ps.setString(1, userId.toString());
             ps.setString(2, name);
             try (ResultSet rs = ps.executeQuery()) {
                 if (rs.next()) {
@@ -76,7 +76,7 @@ public class TagRepositoryImpl implements TagRepository {
     }
 
     @Override
-    public List<Tag> findByIds(Set<String> ids) {
+    public List<Tag> findByIds(Set<UUID> ids) {
         if (ids == null || ids.isEmpty()) {
             return List.of();
         }
@@ -91,8 +91,8 @@ public class TagRepositoryImpl implements TagRepository {
         try (Connection conn = SQLiteConnectionFactory.getConnection();
              PreparedStatement ps = conn.prepareStatement(sql)) {
             int index = 1;
-            for (String id : ids) {
-                ps.setString(index++, id);
+            for (UUID id : ids) {
+                ps.setString(index++, id.toString());
             }
 
             try (ResultSet rs = ps.executeQuery()) {
@@ -140,7 +140,7 @@ public class TagRepositoryImpl implements TagRepository {
 
                 boolean hasNext = tags.size() > pageRequest.size();
                 if (hasNext) {
-                    tags.remove(tags.size() - 1);
+                    tags.removeLast();
                 }
 
                 return Page.of(tags, pageRequest, hasNext);
@@ -168,6 +168,50 @@ public class TagRepositoryImpl implements TagRepository {
         } catch (SQLException e) {
             log.error("Failed to create tag id='{}'", tag.getId(), e);
             throw new RuntimeException("Database error while creating tag", e);
+        }
+    }
+
+    @Override
+    public void delete(UUID id) {
+        String sql = "DELETE FROM tags WHERE id = ?";
+
+        try (Connection conn = SQLiteConnectionFactory.getConnection();
+             PreparedStatement ps = conn.prepareStatement(sql)) {
+            ps.setString(1, id.toString());
+            int rows = ps.executeUpdate();
+            if (rows == 0) {
+                log.warn("Delete affected 0 rows for tag id='{}'", id);
+            } else {
+                log.debug("Tag deleted: id={}", id);
+            }
+        } catch (SQLException e) {
+            log.error("Failed to delete tag id='{}'", id, e);
+            throw new RuntimeException("Database error while deleting tag", e);
+        }
+    }
+
+    @Override
+    public void update(Tag tag) {
+        String sql = """
+            UPDATE tags
+            SET name = ?, color = ?
+            WHERE id = ?
+            """;
+
+        try (Connection conn = SQLiteConnectionFactory.getConnection();
+             PreparedStatement ps = conn.prepareStatement(sql)) {
+            ps.setString(1, tag.getName());
+            ps.setString(2, tag.getColor().getValue());
+            ps.setString(3, tag.getId().toString());
+            int rows = ps.executeUpdate();
+            if (rows == 0) {
+                log.warn("Update affected 0 rows for tag id='{}'", tag.getId());
+            } else {
+                log.debug("Tag updated: id={}", tag.getId());
+            }
+        } catch (SQLException e) {
+            log.error("Failed to update tag id='{}'", tag.getId(), e);
+            throw new RuntimeException("Database error while updating tag", e);
         }
     }
 
